# FastAPI_LT

./: .gitignore  README.md  docker-compose.yml
app/: pyproject.toml
app/fastapi_lt/: main.py
app/tests/: test_fastapi_lt.py
docker/fastapi/: dockerfile
docker/nginx/: dockerfile
nginx/: nginx.conf
nginx/log/: git_save_directory.txt
