[tool.poetry]
name = "FastAPI_LT"
version = "0.1.0"
description = ""
authors = ["xaviflog"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
requests = "^2.27.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
